tests/golden/errors/yield_outside.xs
fn f() {
    yield 1
}
